# TMan

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  makefile  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  run.py  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  pythonapp.yml  release.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  installation.md  usage.md
installation/: index.html
search/: search_index.json
src/task_manager/gui/: __init__.py  main.py
task_manager/: __init__.py  api.py  cli.py
task_manager/backend/: __init__.py
task_manager/cli/: __init__.py  main.py
task_manager/gui/: main.py
task_manager/util/: __init__.py  logging.py
tests/: __init__.py  test_cli.py  test_task_manager.py
tman/: __init__.py
tman/cli/: __init__.py  main.py
tman/gui/: main.py
tman/tui/: __init__.py  app.py  main.py
tman/tui/widgets/: __init__.py  dropdown.py
tman/util/: logging.py
usage/: index.html
